--- a/shope-page.html
+++ b/shope-page.html
@@ -52,15 +52,14 @@
 			<nav class="menu">
 				<div class="mobile-menu-area d-lg-none">
 					<div class="mobile-menu-area-inner" id="scrollbar">
-						<ul class="main-menu d-flex align-items-center">
+						<ul class="m-menu">
 							<li><a  href="index.html">Home</a> 
 							</li>
 							<li><a href="about.html">About Us </a>
-									</li>
 							</li>
-							<li><a class="active"href="shope-page.html">Products</a>
+							<li><a class="active" href="#">Products</a>
 								<ul style="align-items:self-end;">
-									<li ><a href="index.html">Milk Analyzers</a>
+									<li ><a href="#">Milk Analyzers</a>
 									<ul  class="m-submenu">
 										<li ><a href="shope-page.html#ksheer">Ksheera 270 ‘A’</a></li>
 										<li><a href="shope-page.html#eko">Eko Milk Ultra</a></li>
@@ -69,7 +68,7 @@
 									</ul>
 									</li>
 									
-									<li><a  href="shope-page.html#ultra">Ultrasonic Stirrer</a></li>
+									<li><a href="shope-page.html#ultra">Ultrasonic Stirrer</a></li>
 
 									<li><a href="#">Data Processing</a>
 										<ul  class="m-submenu">
@@ -114,16 +113,14 @@
 									<li><a href="shope-page.html#emilkeemilk">eMilk VLCC Application Software</a></li>
 								</ul>
 							</li>
-							<li><a href="gallery.html">Gallery</a>
-							</li>
-							<li><a href="contact-us.html">Contact us</a>
-							</li>
+							<li><a href="gallery.html">Gallery</a></li>
+							
+							<li><a href="contact-us.html">Contact us</a></li>
 						</ul>
 						<ul class="social-link-list d-flex flex-wrap">
 							<li><a href="#" class="facebook"><i class=" fab fa-facebook-f"></i></a></li>
 							<li><a href="#" class="twitter-sm"><i class="fab fa-twitter"></i></a></li>
 							<li><a href="#" class="linkedin"><i class="fab fa-linkedin-in"></i></a></li>
-							<li><a href="#" class="google"><i class="fab fa-google-plus-g"></i></a></li>
 						</ul>
 					</div>
 				</div>
