--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
 						<div class="htop-left">
 							<ul class="htop-information">
 								<li><i class="far fa-envelope"></i> Gowala45@gmail.com</li>
-								<li><i class="fas fa-phone-volume"></i> +88 130 589 745 6987</li>
+								<li><i class="fas fa-phone-volume"></i> +91 7090120965</li>
 								<li><i class="far fa-clock"></i> Mon - Fri 09:00 - 18:00</li>
 							</ul>
 						</div>
@@ -596,7 +596,7 @@
 											<i class="fas fa-phone-volume"></i>
 										</div>
 										<div class="content-part">
-											<p>+91 9985226341</p>
+											<p>+91 7090120965</p>
 										</div>
 									</li>
 									<li>
@@ -644,7 +644,7 @@
 			<div class="footer-bottom wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s">
 				<div class="container">
 					<div class="section-wrapper">
-												<p class="text-center">&copy; 2021 <a href="index.html">EKO Milk Analyzer</a>.All Rights Reserved By <a href="https://brightads.in/">Bright Ads Digital India</a></p>
+												<p class="text-center">&copy; 2023 <a href="index.html">EKO Milk Analyzer</a>.All Rights Reserved By <a href="#">Freelauncher</a></p>
 					</div>
 				</div>
 			</div>
