--- a/contact-us.html
+++ b/contact-us.html
@@ -136,7 +136,7 @@
 						<div class="htop-left">
 							<ul class="htop-information">
 								<li><i class="far fa-envelope"></i> Gowala45@gmail.com</li>
-								<li><i class="fas fa-phone-volume"></i> +88 130 589 745 6987</li>
+								<li><i class="fas fa-phone-volume"></i>+91 7090120965</li>
 								<li><i class="far fa-clock"></i> Mon - Fri 09:00 - 18:00</li>
 							</ul>
 						</div>
@@ -312,7 +312,6 @@
 									</div>
 									<div class="content-part">
 											<p>FLAT NO.102, 1st 
-												FLOOR,SAI RADHAA RESIDENCY,VIJAYANAGAR COLONY, ANANTHAPURAMU
 												ANDHRA PRADESH<br>515001
 												</p>
 									</div>
@@ -352,7 +351,7 @@
 											<i class="fas fa-phone-volume"></i>
 										</div>
 										<div class="content-part">
-											<p>+91 9985226341</p>
+											<p>+91 +91 7090120965</p>
 										</div>
 									</li>
 									<li>
@@ -369,8 +368,7 @@
 											<i class="fas fa-map-marker-alt"></i>
 										</div>
 										<div class="content-part">
-												<p>FLAT NO.102, 1st 
-												FLOOR,SAI RADHAA RESIDENCY,VIJAYANAGAR COLONY, ANANTHAPURAMU
+												<p>
 												ANDHRA PRADESH<br>515001
 												</p>
 										</div>
@@ -399,7 +397,7 @@
 			<div class="footer-bottom">
 				<div class="container">
 					<div class="section-wrapper">
-												<p class="text-center">&copy; 2021 <a href="index.html">EKO Milk Analyzer</a>.All Rights Reserved By <a href="https://brightads.in/">Bright Ads Digital India</a></p>
+												<p class="text-center">&copy; 2023 <a href="index.html">EKO Milk Analyzer</a>.All Rights Reserved By <a href="#">Freelauncher</a></p>
 					</div>
 				</div>
 			</div>
