--- a/about.html
+++ b/about.html
@@ -613,9 +613,7 @@
 											<i class="fas fa-map-marker-alt"></i>
 										</div>
 										<div class="content-part">
-												<p>FLAT NO.102, 1st 
-												FLOOR,SAI RADHAA RESIDENCY,VIJAYANAGAR COLONY, ANANTHAPURAMU
-												ANDHRA PRADESH<br>515001
+												<p>ANDHRA PRADESH<br>515001
 												</p>
 										</div>
 									</li>
