--- a/index.html
+++ b/index.html
@@ -559,9 +559,7 @@
 											<i class="fas fa-map-marker-alt"></i>
 										</div>
 										<div class="content-part">
-												<p>FLAT NO.102, 1st 
-												FLOOR,SAI RADHAA RESIDENCY,VIJAYANAGAR COLONY, <br>ANANTHAPURAMU
-												ANDHRA PRADESH<br>515001
+												<p>ANDHRA PRADESH<br>515001
 												</p>
 										</div>
 									</li>
