--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
 			<div class="footer-bottom wow fadeInUp " data-wow-duration="1s" data-wow-delay=".1s">
 				<div class="container">
 					<div class="section-wrapper">
-						<p class="text-center">&copy; 2023 <a href="index.html">EKO Milk Analyzer</a>.All Rights Reserved By <a href="#"></a></p>
+						<p class="text-center">&copy; 2023 <a href="index.html">EKO Milk Analyzer</a>.All Rights Reserved By <a href="#">Freelauncher</a></p>
 					</div>
 				</div>
 			</div>
